--- a/config/culling_settings.yaml
+++ b/config/culling_settings.yaml
@@ -4,8 +4,8 @@
 pcd_input_file: house_colored4.pcd
 viewpoints_file: viewpoints.txt
 voxel_res: 0.1
-leaf_size: 0.1
 frame_id: world
+debug_enabled: true
 
 ####################
 ## Sensor Position - In reference to body frame
